--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,6 +9,20 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+
+    </div>
+    <div class="navbar-nav">
+      <% if (username) {%>
+        logged in to: <%= username %>
+        <form method="POST" action="/urls/logout">
+          <button type="submit" class="btn btn-outline-dark" >Logout</button>
+      </form>
+      <% } else {%>
+        <form method="POST" action="/urls/login">
+            <input name="username" type="text" id="url" placeholder="username"> 
+            <button type="submit" class="btn btn-outline-dark" >Login</button>
+        </form>
+      <% } %>
     </div>
   </nav>
 </header>
